chore(userControllerTest): chore userControllerTest